--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,29 +1,32 @@
-version: "3.8"
-
+version: '3.9'
 services:
-  mongodb:
-    image: mongo:6-jammy
-    container_name: mongodb-1
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: the_username  # Vaihda haluamaasi käyttäjään
-      MONGO_INITDB_ROOT_PASSWORD: the_password  # Vaihda haluamaasi salasanaan
-      MONGO_INITDB_DATABASE: the_database       # Tietokannan nimi
-    volumes:
-      - mongo-data:/data/db
-    command: ["mongod", "--auth"]
-  
-  todo-backend:
+  app:
     build: .
-    container_name: todo-backend
     ports:
       - "3000:3000"
     environment:
-      MONGO_URL: mongodb://the_username:the_password@mongodb:27017/the_database
-      PORT: 3000
+      - MONGO_URL=mongodb://mongodb-1:27017/the_database?authSource=admin
+      - REDIS_URL=redis://redis:6379
     depends_on:
-      - mongodb
+      - redis
+      - mongodb-1
+    networks:
+      - backend-net
 
-volumes:
-  mongo-data:
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - backend-net
+
+  mongodb-1:
+    image: mongo:6-jammy
+    ports:
+      - "27017:27017"
+    networks:
+      - backend-net
+
+networks:
+  backend-net:
+    driver: bridge
