--- a/todo-app/todo-backend/package.json
+++ b/todo-app/todo-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "todo-express-backend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,12 +9,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "mongoose": "^5.13.23",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.5",
     "morgan": "~1.9.1",
-    "redis": "^3.1.2"
+    "redis": "^5.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
